# mac0460-projeto

./: .gitignore  CMakeLists.txt  Makefile  decisoes.txt  novo-1.tex  publish.sh  relatorio.tex  runTest.sh  runTestBattery.sh  runTests.sh  test.set  training.set
logs/: bayes.test  bayes.times  bayes_classifier-ORB-SURF.out  bayes_classifier-PyramidORB-SIFT.out  bayes_classifier-PyramidORB-SURF.out  bayes_classifier-PyramidSIFT-SIFT.out  bayes_classifier-PyramidSIFT-SURF.out  bayes_classifier-PyramidSTAR-SIFT.out  bayes_classifier-PyramidSTAR-SURF.out  bayes_classifier-PyramidSURF-SIFT.out  bayes_classifier-PyramidSURF-SURF.out  bayes_classifier-SIFT-SIFT.out  bayes_classifier-SIFT-SURF.out  bayes_classifier-STAR-SIFT.out  bayes_classifier-STAR-SURF.out  bayes_classifier-SURF-SIFT.out  bayes_classifier-SURF-SURF.out  confusion.awk  confusion.coelho  confusion.sh  dtree.test  dtree.times  dtree_classifier-ORB-SURF.out  dtree_classifier-PyramidORB-SIFT.out  dtree_classifier-PyramidORB-SURF.out  dtree_classifier-PyramidSIFT-SIFT.out  dtree_classifier-PyramidSIFT-SURF.out  dtree_classifier-PyramidSTAR-SIFT.out  dtree_classifier-PyramidSTAR-SURF.out  dtree_classifier-PyramidSURF-SIFT.out  dtree_classifier-PyramidSURF-SURF.out  dtree_classifier-SIFT-SIFT.out  dtree_classifier-SIFT-SURF.out  dtree_classifier-STAR-SIFT.out  dtree_classifier-STAR-SURF.out  dtree_classifier-SURF-SIFT.out  dtree_classifier-SURF-SURF.out  knn.test  knn.times  knn_classifier-ORB-SURF.out  (+32 more)
src/: main.cxx
src/bayes/: config.h
src/dtree/: config.h
src/knn/: config.h
src/rtrees/: config.h
test_set/: .gitignore  LEIAME
training_set/: LEIAME
